# ardupilot_gazebo

./: .gitignore  CMakeLists.txt
include/: ArduPilotPlugin.hh
models/rover_ardupilot_prod/: model.config  model.sdf
msgs/: CMakeLists.txt
src/: ArduCopterPlugin.cc  ArduPilotPlugin.cc
worlds/: rover_ardupilot_prod.world
